<resources>
    <string name="app_name">Rick &amp; Morty</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Titles -->
    <string name="title_characters">Characters</string>
    <string name="title_gender">Gender</string>
    <string name="title_origin">Origin</string>
    <string name="title_location">Current Location</string>
    <string name="title_episodes">Episodes</string>
    <string name="title_species">Species</string>

    <!-- Messages -->
    <string name="message_no_characters">No characters found</string>

    <!-- Place holder -->
    <string name="placeholder_short">Short Placeholder</string>


</resources>